# kataloger

./: .editorconfig  .gitignore  Dockerfile  README.md  catalog.versions.toml  cataloger.py  changelog.md  main.py  parser.py  pyproject.toml  repositories.toml  requirements-test.txt  requirements.txt  updater.py
.github/workflows/: publish-container.yml  publish-docker-image.yml  publish.yml  run-tests.yml
data/: Artifact.py  ArtifactMetadata.py  ArtifactUpdateInfo.py  AvailableUpdate.py  Library.py  Plugin.py  Repository.py
src/kataloger/: __init__.py  __main__.py  catalog.versions.toml  catalog_updater.py  catalog_updater_builder.py  default.configuration.toml  default.repositories.toml
src/kataloger/cli/: argument_parser.py  cli.py  configuration_provider.py  update_print_helper.py
src/kataloger/data/: artifact_metadata.py  artifact_update.py  catalog.py  configuration_data.py  kataloger_arguments.py  kataloger_configuration.py  metadata_repository_info.py  repository.py
src/kataloger/data/artifact/: artifact.py  library.py  plugin.py
src/kataloger/exceptions/: kataloger_configuration_exception.py  kataloger_exception.py  kataloger_parse_exception.py
src/kataloger/execptions/: kataloger_configuration_exception.py  kataloger_parse_exception.py
src/kataloger/helpers/: backport_helpers.py  log_helpers.py  path_helpers.py  structural_matching_helpers.py  toml_parse_helpers.py  update_helpers.py  xml_parse_helpers.py
src/kataloger/update_resolver/: README.md
src/kataloger/update_resolver/base/: update_resolution.py  update_resolver.py
src/kataloger/update_resolver/universal/: universal_update_resolver.py  universal_version.py  universal_version_factory.py  version.py  version_factory.py
tests/: conftest.py  entity_factory.py  test_catalog_updater.py  test_catalog_updater_builder.py
tests/cli/: test_argument_parser.py  test_configuration_provider.py
tests/comparators/universal/: test_universal_version.py
tests/data/: test_repository.py
tests/data/artifact/: test_library.py  test_plugin.py
tests/helpers/: test_backport_helpers.py  test_path_helpers.py  test_structural_matching_helpers.py  test_toml_parse_helpers.py  test_xml_parse_helpers.py
tests/update_resolver/universal/: test_universal_version.py  test_universal_version_factory.py
