[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kataloger"
version = "0.2.0"
dependencies = [
    "aiohttp",
    "yarl",
    "xmltodict",
]
authors = [
    { name = "Dzmitry Pryskoka", email = "mr.priskoka@yandex.com" },
]
description = "CLI tool for projects that uses gradle version catalog to check dependency updates."
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
kataloger = ["default.repositories.toml"]

[project.scripts]
kataloger = "kataloger.__main__:main"

[project.urls]
"GitHub" = "https://github.com/dzmpr/kataloger"
"Changelog" = "https://github.com/dzmpr/kataloger/releases"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "UP",  # pyupgrade
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ANN101", # will be deprecated
    "ANN102", # will be deprecated
    "ANN204", # return type annotation for special methods
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["ANN201", "ANN205"] # return not required for tests
