[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kataloger"
version = "0.3.0"
dependencies = [
    "aiohttp",
    "yarl",
    "xmltodict",
    "tomli; python_version < \"3.11\"",
    "importlib-resources; python_version < \"3.9\""
]
authors = [
    { name = "Dzmitry Pryskoka", email = "mr.priskoka@yandex.com" },
]
description = "CLI tool for projects that uses gradle version catalog to check dependency updates."
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
kataloger = ["default.repositories.toml"]

[project.scripts]
kataloger = "kataloger.__main__:main"

[project.urls]
"GitHub" = "https://github.com/dzmpr/kataloger"
"Changelog" = "https://github.com/dzmpr/kataloger/releases"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
required-version = ">=0.5.5"
output-format = "concise"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
]
ignore = [
    "ANN101", # will be deprecated
    "ANN102", # will be deprecated
    "ANN204", # return type annotation for special methods
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["ANN201", "ANN205"] # return not required for tests
