[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kataloger"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Dzmitry Pryskoka", email = "mr.priskoka@yandex.com" },
]
description = "CLI tool for projects that uses gradle version catalog to check dependency updates."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[project.scripts]
kataloger = "kataloger.__main__:main"

[project.urls]
"GitHub" = "https://github.com/dzmpr/kataloger"
"Changelog" = "https://github.com/dzmpr/kataloger/releases"

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
kataloger = ["default.configuration.toml"]

[tool.setuptools.dynamic]
version = { attr = "kataloger.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
required-version = ">=0.11.13"
output-format = "concise"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ERA", # eradicate
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "SLOT", # flake8-slots
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "FLY", # flynt
    "N", # pep8-naming
    "PERF", # perflint
    "FURB", # refurb
    "TRY", # tryceratops
]
ignore = [
    "ANN204", # return type annotation for special methods
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["ANN201", "ANN205"] # return not required for tests
